2003-03-06	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Remove AC_CONFIG_AUX_DIR.

2003-02-20	Till Straumann <strauman@slac.stanford.edu>

	PR 349/bsps
	* mpc6xx/exceptions/raw_exception.c, mpc6xx/mmu/bat.c,
	mpc6xx/mmu/pte121.c, shared/include/cpuIdent.c,
	shared/include/cpuIdent.h, shared/src/Makefile.am, shared/src/stack.c,
	shared/src/stackTrace.h, powerpc/registers.h:
	  - undo improper 'fix' who broke mpc604r identification
	  - fix: 7400 identification PVR value was wrong
	  - enhance 'setdbat()' to switch OFF a given BAT if called with 0 size
	  - fix: page table support bugfix
	  - enhancement: provide routines to take and print stack trace
	    snapshots
	  - add definitions for HID1 and DABR SPRs

2003-02-14	Greg Menke <gregory.menke@gsfc.nasa.gov>

	PR 348/bsps
	* mpc6xx/exceptions/raw_exception.c: Add PPC_603ev as required
	by MTX603e BSP.

2003-02-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: AM_INIT_AUTOMAKE([1.7.2]).

2003-02-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: AC_PREREQ(2.57).

2002-12-19	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Remove RTEMS_CHEC_CUSTOM_BSP.
	* mpc505/ictrl/Makefile.am: Don't include @RTEMS_BSP@.cfg.
	* mpc505/timer/Makefile.am: Don't include @RTEMS_BSP@.cfg.
	* mpc505/vectors/Makefile.am: Don't include @RTEMS_BSP@.cfg.
	* mpc6xx/clock/Makefile.am: Don't include @RTEMS_BSP@.cfg.
	* mpc6xx/exceptions/Makefile.am: Don't include @RTEMS_BSP@.cfg.
	* mpc6xx/mmu/Makefile.am: Don't include @RTEMS_BSP@.cfg.
	* mpc6xx/timer/Makefile.am: Don't include @RTEMS_BSP@.cfg.
	* mpc6xx/wrapup/Makefile.am: Don't include @RTEMS_BSP@.cfg.
	* mpc8260/clock/Makefile.am: Don't include @RTEMS_BSP@.cfg.
	* mpc8260/console-generic/Makefile.am: Don't include @RTEMS_BSP@.cfg.
	* mpc8260/cpm/Makefile.am: Don't include @RTEMS_BSP@.cfg.
	* mpc8260/exceptions/Makefile.am: Don't include @RTEMS_BSP@.cfg.
	* mpc8260/mmu/Makefile.am: Don't include @RTEMS_BSP@.cfg.