@@ -1,3 +1,8 @@
+2003-03-25	Till Straumann <strauman@slac.stanford.edu>
+
+	PR 349/bsps
+	* shared/include/cpuIdent.c: Readd PPC604r CPU.
+
 2003-03-06	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
 
 	* configure.ac: Remove AC_CONFIG_AUX_DIR.
